Basic slide ugent theme; fixed slide overflow issues by adding a scrollbar when content is longer than slide.

--- a/client/assets/stylesheets/scss/theme/_base.scss
+++ b/client/assets/stylesheets/scss/theme/_base.scss
@@ -14,6 +14,11 @@ a {
 }
 
 // TODO: THIS IS TEMPORARY STYLING!!!!!!
+
+#{$SELECTORS-WIDGET--BUTTON} {
+  cursor: pointer;
+}
+
 #presentation-toolbar {
   background-color: black;
   position: fixed;
@@ -83,4 +88,5 @@ a {
   position: absolute;
   top: 0;
   right: 0;
+  z-index: 1;
 }
